[gd_scene load_steps=14 format=3 uid="uid://goqretkjbb5r"]

[ext_resource type="Script" uid="uid://b7kgau53cwdal" path="res://mini_game/arrow_game.gd" id="1_a0ttv"]
[ext_resource type="PackedScene" uid="uid://c4ag5k0nbd3xu" path="res://touch_controls.tscn" id="1_deub8"]
[ext_resource type="Script" uid="uid://ddl5wugqfl2pu" path="res://gameplay.gd" id="2_ct5qo"]
[ext_resource type="Texture2D" uid="uid://brkdud766l7mw" path="res://cible (1).png" id="3_deub8"]
[ext_resource type="PackedScene" uid="uid://darqe70b8rcs7" path="res://Assets/pack_bar/pack_bar.glb" id="4_ct5qo"]
[ext_resource type="Script" uid="uid://g5n7xu2xjxpy" path="res://mini_game/arrow_interact.gd" id="6_5efml"]
[ext_resource type="Texture2D" uid="uid://c1twxra57caqq" path="res://fleshette_icon.png" id="6_h1exp"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sbslj"]
height = 0.5
radius = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qr8fx"]
albedo_texture = ExtResource("3_deub8")
emission_enabled = true
emission_texture = ExtResource("3_deub8")
uv1_scale = Vector3(0.1, 0.1, 0.1)
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_qr8fx"]
material = SubResource("StandardMaterial3D_qr8fx")
top_radius = 0.8
height = 0.2

[sub_resource type="FontFile" id="FontFile_deub8"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0

[sub_resource type="Theme" id="Theme_ct5qo"]
default_font = SubResource("FontFile_deub8")
RichTextLabel/font_sizes/bold_font_size = 64
RichTextLabel/font_sizes/normal_font_size = 32
RichTextLabel/fonts/bold_font = SubResource("FontFile_deub8")
RichTextLabel/styles/fill = null

[sub_resource type="BoxShape3D" id="BoxShape3D_ct5qo"]
size = Vector3(2.47827, 3.7793, 4.47368)

[node name="Node3D" type="Node3D"]
script = ExtResource("1_a0ttv")

[node name="TouchControls" parent="." instance=ExtResource("1_deub8")]

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0345129, 0.136756, 4.07733)
script = ExtResource("2_ct5qo")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D"]

[node name="OmniLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(0.103448, 0.457298, -0.883276, 0.0068179, 0.887694, 0.460384, 0.994612, -0.0536478, 0.0887123, -66.2171, 9.59972, 9.51829)
visible = false
light_color = Color(0.790125, 0.742766, 0.68079, 1)
light_indirect_energy = 2.0
light_specular = 0.015
shadow_enabled = true
shadow_bias = 1.0
distance_fade_begin = 743.35
distance_fade_shadow = 0.0
distance_fade_length = 11.1
spot_range = 73.7848
spot_attenuation = -1.0
spot_angle = 29.0573
spot_angle_attenuation = 0.0334928

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.5953, 10.199, 0.135781)
visible = false
light_color = Color(0.993802, 0.590624, 0.360597, 1)
light_energy = 1.323
omni_range = 2549.53
omni_attenuation = -0.01

[node name="StaticBody3D" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.12144, -3.10428, 9.59109)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.09979, 3.3268, -9.48576)
shape = SubResource("CylinderShape3D_sbslj")
debug_color = Color(0, 0.6, 0.701961, 0.807843)

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -1.09979, 3.3268, -9.48576)
mesh = SubResource("CylinderMesh_qr8fx")

[node name="pack_bar" parent="StaticBody3D" instance=ExtResource("4_ct5qo")]
transform = Transform3D(-3.27745e-08, 0, -0.749793, 0, 0.749793, 0, 0.749793, 0, -3.27745e-08, -1.10248, 3.33558, -9.43195)

[node name="RichTextLabel" type="Label" parent="."]
custom_minimum_size = Vector2(200, 200)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -382.0
offset_bottom = 200.0
grow_horizontal = 0
theme = SubResource("Theme_ct5qo")
text = "1000Pt"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArrowGame" type="StaticBody3D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("6_5efml")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ArrowGame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.38965, 2.14709)
shape = SubResource("BoxShape3D_ct5qo")

[node name="IconCanPlay" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="TextureRect" type="TextureRect" parent="IconCanPlay"]
layout_mode = 0
offset_left = -56.0
offset_top = -93.0
offset_right = 50.0
offset_bottom = 13.0
texture = ExtResource("6_h1exp")
expand_mode = 1

[node name="IconPos" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.06394, -0.363951, 0.720149)

[node name="PlayerPlace" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.17772, 4.56747)
